--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Impolite Slayer
+author=Daxe
+description=Makes your character less polite when receiving a bad task from a slayer master
+tags=impolite,slayer,duradel,task,assignment
+plugins=com.ImpoliteSlayer.ImpoliteSlayerPlugin
